После нажатия на один из элементов recycler view открывается экран с информацией о ребенке на карточку которого нажали

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MyApplication">
         <activity
+            android:name=".InfoReadActivity"
+            android:exported="false" />
+        <activity
             android:name=".AddChildActivity"
             android:exported="true" />
         <activity
